# ugv_casualty_inspection_list_manager

./: CMakeLists.txt  README.md  package.xml
include/ugv_casualty_inspection_list_manager/: allocation_manager.hpp
launch/: allocation_manager.launch.xml
scripts/: database_test.sh  finish_service_test.sh  request_service_test.sh
src/: allocation_manager.cpp  allocation_manager_node.cpp
