<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_casualty_inspection_list_manager</name>
  <version>0.1.0</version>
  <description>Node accumulating task allocations in the system and providing them to other nodes.</description>
  <maintainer email="vwalter@andrew.cmu.edu">Viktor Walter</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
    
  <depend>base_node_msgs</depend>
  <depend>geographic_utils</depend>

  <depend>triage_task_allocation_interface</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
    
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
